--- a/main.tex
+++ b/main.tex
@@ -36,8 +36,7 @@
 \FEIpdfInfo
 \FEIcover
 \FEItitlePage
-\FEIassignment{img/ZadanieBakalarky.png}
-% \FEIassignment{includes/assignment_part2.jpeg}
+\FEIassignment{includes/Bakalarka_zadanie.pdf}
 \FEIabstract{includes/abstract}
 \FEIabstractEn{includes/abstractEN}
 \FEIthanks{includes/thanks}
