cp: rename main.pdf to Lobpreis_Filip_PB.pdf
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/abstract.tex
+++ b/includes/abstract.tex
@@ -1,11 +1,11 @@
 % !TEX root = ../main.tex
-V tejto bakalárskej práci sa zaoberáme riadením mobilného robota v prostredí ROS2. Robot, ktorý budeme využívať
-je vybavený diferenciálnym podvozkom a dvoma opornými všesmerovými kolesami. Obsahuje dva enkódery pre pravé
-a ľavé koleso, ktoré merajú rýchlosti otáčania kolies v impulzoch za sekundu. Jeho ovládanie a komunikácia
-s ním prebieha cez TCP/IP spojenie. Pri komunikácii s robotom sa posielajú spravy v štruktúre JSON.
+V~tejto bakalárskej práci sa zaoberáme riadením mobilného robota v~prostredí ROS2. Robot, ktorý budeme využívať
+je vybavený diferenciálnym podvozkom a~dvoma opornými všesmerovými kolesami. Obsahuje dva enkódery pre~pravé
+a~ľavé koleso, ktoré merajú rýchlosti otáčania kolies v~impulzoch za~sekundu. Jeho ovládanie a~komunikácia
+s~ním prebieha cez~TCP/IP spojenie. Pri~komunikácii s~robotom sa posielajú spravy v~štruktúre JSON.
 Výsledným cieľom tejto bakalárskej práce je vytvoriť ovládač robota, ktorý bude sprístupňovať ovládanie robota
-v prostredí ROS2. V prvej kapitole sa venujeme analýze pôvodného stavu robota a jeho komunikačnému rozhraniu.
-V druhej kapitole popisujeme návrh implementácie ovládača robota v prostredí ROS2. Tretiu kapitolu sme venovali
-popísaniu zlepšení, ktoré sme vykonali na robote. Štvrtá kapitola sa venuje samotnej implementácii ovládača robota.
-V predposlednej kapitole opisujeme ako sme prekonali problémy, ktoré vznikli pri komunikácii s robotom. V poslednej
-kapitole opisujeme viacero využití ovládača robota v prostredí ROS2.
+v~prostredí ROS2. V~prvej kapitole sa venujeme analýze pôvodného stavu robota a~jeho komunikačnému rozhraniu.
+V~druhej kapitole popisujeme návrh implementácie ovládača robota v~prostredí ROS2. Tretiu kapitolu sme venovali
+popísaniu zlepšení, ktoré sme vykonali na~robote. Štvrtá kapitola sa venuje samotnej implementácii ovládača robota.
+V~predposlednej kapitole opisujeme ako sme prekonali problémy, ktoré vznikli pri~komunikácii s~robotom. V~poslednej
+kapitole opisujeme viacero využití ovládača robota v~prostredí ROS2.
