--- a/includes/technologie.tex
+++ b/includes/technologie.tex
@@ -1,5 +1,5 @@
 % !TEX root = ../main.tex
-\section{Návrh implementácie riadenia}
+\section{Analýza použitých informačných technológií}
 \label{sec:technologies}
 
 Našou úlohou v~tejto bakalárskej práci je naprogramovať a~otestovať nami vytvorený ovládač pre~mobilného
